GNOME Bugzilla – Bug 649195
[miniobject] Fix dup_mini_object function to handle NULL gvalues
Last modified: 2011-05-03 11:17:03 UTC
Attached patch to make gst_value_dup_mini_object behave just like g_value_dup_object
Created attachment 187040 [details] [review] miniobject: Fix dup_mini_object function to handle NULL gvalues g_value_dup_object handles gvalues that contain NULL pointers, gst_value_dup_mini_object should do the same.
I guess this is related to bug #649227 ? IMHO we should get this into this release
(In reply to comment #2) > I guess this is related to bug #649227 ? IMHO we should get this into this > release Exactly, to set miniobjects properties to NULL from python you need both fixes.
Comment on attachment 187040 [details] [review] miniobject: Fix dup_mini_object function to handle NULL gvalues Looks like a good thing to fix, and should be harmless.
commit a750aac2dd59453a875d19abf75d0203b217a77d Author: Thiago Santos <thiago.sousa.santos@collabora.co.uk> Date: Mon May 2 11:30:06 2011 -0300 miniobject: Fix dup_mini_object function to handle NULL gvalues g_value_dup_object handles gvalues that contain NULL pointers, gst_value_dup_mini_object should do the same. https://bugzilla.gnome.org/show_bug.cgi?id=649195